# relatorio_atual

./: .env  .gitignore  envio.db  main.spec  nf_entrada.csv  nf_saida.csv  pyproject.toml  token.json
src/: main.py
src/database/: data_base.py  db_postgres.py  df_table.py  nf_model_entrada.py  nf_model_saida.py
src/secrets/: credentials.json  token.json
src/utils/: date_util.py  send_email.py
